--- a/usermanage/.classpath
+++ b/usermanage/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="src" path="src/test/resourses"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib/dbunit-2.1.jar"/>
+	<classpathentry kind="lib" path="lib/hsqldb-1.8.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
