--- a/usermanage/bin/settings.properties
+++ b/usermanage/bin/settings.properties
@@ -2,5 +2,5 @@ connection.diver=org.hsqldb.jdbcDriver
 connection.url=jdbc:hsqldb:file:db/usermanage
 connection.user=sa
 connection.password=
-
+dao.factory=com.vladbel.usermanagment.db.DaoFactoryImpl
 dao.com.vladbel.usermanagment.db.UserDao=com.vladbel.usermanagment.db.HsqldbUserDao
