--- a/usermanage/db/usermanage.properties
+++ b/usermanage/db/usermanage.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine
-#Sun Nov 13 23:28:59 MSK 2016
+#Sun Nov 27 19:01:20 IST 2016
 hsqldb.script_format=0
 runtime.gc_interval=0
 sql.enforce_strict_size=false
