--- a/usermanage/src/main/resourses/settings.properties
+++ b/usermanage/src/main/resourses/settings.properties
@@ -1,5 +1,5 @@
 connection.diver=org.hsqldb.jdbcDriver
-connection.url=jdbc:hsqldb:file:db/usermanage
+connection.url=jdbc:hsqldb:file:C:/Users/Владислав/workspace/usermanage/db/usermanage
 connection.user=sa
 connection.password=
 dao.factory=com.vladbel.usermanagment.db.DaoFactoryImpl
